--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "symfony/config": "^4.1",
     "symfony/yaml": "^4.1",
     "symfony/framework-bundle": "^4.1",
-    "doctrine/inflector": "^1.3"
+    "doctrine/inflector": "^1.3",
+    "symfony/phpunit-bridge": "^4.1"
   }
 }
