Changed for travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
   # Minimum supported dependencies with the latest and oldest PHP version
   - php: 7.2
     env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
-  - php: 7.0
-    env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
+  # - php: 7.0
+    # env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
 
     # Test the latest stable release
   - php: 7.0
@@ -49,10 +49,10 @@ install:
 # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
 - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --prefer-dist --no-interaction --prefer-stable --quiet; fi
 - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
-- ./vendor/bin/simple-phpunit install
+# - ./vendor/bin/simple-phpunit install
 
 script:
 - composer validate --strict --no-check-lock
 # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component and
 # it helps with testing legacy code and deprecations (composer require symfony/phpunit-bridge)
-- ./vendor/bin/simple-phpunit $PHPUNIT_FLAGS
+- ./vendor/bin/phpunit $PHPUNIT_FLAGS
